# aegis-swarm-exact

./: .gitignore  INTEGRATIONS.md  README.md  pyproject.toml
configs/: gemma1b_only.yaml  models.yaml  paper_autotuned.yaml  paper_validated_strict.yaml  paper_validated_strict_gemma_qat.yaml  paper_validated_strict_qwen.yaml
docs/: PRODUCT_RESEARCH.md
runs/: paper_validation_report.json  paper_validation_report_deepseek1p5b.json  paper_validation_report_gemma270m.json  paper_validation_report_gemma_qat.json  paper_validation_report_lfm2p5thinking.json  paper_validation_report_ministral3b.json  paper_validation_report_qwen.json  paper_validation_report_qwen4b_preflight.json
src/mdap_small/: adapter.py  cli.py  graph_memory.py  hanoi.py  history.py  integrations.py  maths.py  models.py  orchestrator.py  prompts.py  red_flags.py  routing.py  server.py  strands_bridge.py  toolbelt.py  validation.py  validation_gate.py  voting.py
tests/: test_smoke.py
web/: index.html
